--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: d3bugr
-author: Roy Quintanar
+title: Roy Quintanar
+author: d3bugr
+logo: https://avatars1.githubusercontent.com/u/45603818?s=460&v=4
 theme: jekyll-theme-minimal
