--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: Roy Quintanar
+description: Programador, abogado, chef y traductor. aka. d3bugr
 author: d3bugr
 logo: https://avatars1.githubusercontent.com/u/45603818?s=460&v=4
 theme: jekyll-theme-minimal
